--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ zmq = "0.8.2"
 # serde_json = "1.0.32"
 # serde_derive = "1.0.80"
 # uuid = { version = "0.7.1", features = ["v4"] }
-# hmac = "0.7.0"
-# sha2 = "0.8.0"
-# hex = "0.3.2"
+hmac = "0.7.0"
+sha2 = "0.8.0"
+hex = "0.3.2"
 # log = "0.4.6"
 # env_logger = "0.5.13"
 failure = "0.1.3"
