--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,8 @@ hmac = "0.7.0"
 sha2 = "0.8.0"
 hex = "0.3.2"
 log = "0.4.6"
-# env_logger = "0.5.13"
 failure = "0.1.3"
+
+[dev-dependencies]
+structopt = "0.2.13"
+env_logger = "0.5.13"
