--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ zmq = "0.8.2"
 serde = "1.0.80"
 serde_json = "1.0.32"
 serde_derive = "1.0.80"
-# uuid = { version = "0.7.1", features = ["v4"] }
+uuid = { version = "0.7.1", features = ["v4"] }
 hmac = "0.7.0"
 sha2 = "0.8.0"
 hex = "0.3.2"
