--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ sha2 = "0.8.0"
 hex = "0.3.2"
 log = "0.4.6"
 failure = "0.1.3"
+digest = "0.8.0"
 
 [dev-dependencies]
 structopt = "0.2.13"
 env_logger = "0.5.13"
+crypto-mac = "0.7.0"
+generic-array = "0.12.0"
