--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,12 +13,31 @@ image: "rust:latest"
 
 # Optional: Install a C compiler, cmake and git into the container.
 # You will often need this when you (or any of your dependencies) depends on C code.
-before_script:
+
+formatting:
+  before_script:
+  - rustup component add rustfmt-preview
+  script:
+  - rustc --version && cargo --version
+  - bash ./bin/check-formatting
+
+
+# Use cargo to test the project
+test:stable:
+  before_script:
   - apt-get update -yqq
   - apt-get install -yqq --no-install-recommends libzmq3-dev
 
-# Use cargo to test the project
-test:cargo:
   script:
   - rustc --version && cargo --version      # Print version info for debugging
-  - cargo test --all --verbose
+  - bash ./bin/test
+
+test:nightly:
+  before_script:
+  - apt-get update -yqq
+  - apt-get install -yqq --no-install-recommends libzmq3-dev
+  - rustup install nightly
+
+  script:
+  - rustc --version && cargo --version      # Print version info for debugging
+  - RUST_VERSION=nightly bash ./bin/test
