--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ hex = "0.3.2"
 log = "0.4.6"
 failure = "0.1.3"
 digest = "0.8.0"
+slice-deque = "0.1.15"
 
 [dev-dependencies]
 structopt = "0.2.13"
