--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ log = "0.4.6"
 failure = "0.1.3"
 digest = "0.8.0"
 chrono = "0.4.6"
+dirs = "1.0.4"
+glob = "0.2.11"
 
 [dev-dependencies]
 structopt = "0.2.13"
