Add doc generation to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,3 +41,7 @@ test:nightly:
   script:
   - rustc --version && cargo --version      # Print version info for debugging
   - RUST_VERSION=nightly bash ./bin/test
+
+docs:
+  script:
+    - RUST_VERSION=stable bash ./bin/docs
