Try to use the latest stable (temporary)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ cache:
 formatting:
   stage: pre
   before_script:
+  - rustup update
   - rustup component add rustfmt-preview
   script:
   - rustc --version && cargo --version
@@ -37,6 +38,7 @@ test:stable:
   before_script:
   - apt-get update -yqq
   - apt-get install -yqq --no-install-recommends libzmq3-dev
+  - rustup update stable
 
   script:
   - rustc --version && cargo --version      # Print version info for debugging
