--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ formatting:
   stage: pre
   before_script:
   - rustup update
-  - rustup component add rustfmt-preview
+  - rustup component add rustfmt
   script:
   - rustc --version && cargo --version
   - bash ./bin/check-formatting
